tests/compile_fail/on_a_function_with_a_complex_return_type_and_dont_cache_errors.rs
use michie::memoized;

#[memoized(key_expr = (), dont_cache_errors)]
fn f<T>() -> (Result<i32,u32>) { Ok(4) }

fn main() {}
